# jumia_market_scraper

./: README.md  main.py  pyproject.toml  requirements  test.py
templates/: base.html  index.html
